welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:17: error: type mismatch;
 found   : Unit
 required: Int
  while (T(num-1)==0){
  ^